--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.tomcat.uri-encoding=ISO-8859-1
+
+server.servlet.encoding.charset=ISO-8859-1
+#server.servlet.encoding.enabled=true
+#server.servlet.encoding.force=true
+#server.servlet.encoding.force-request=true
+#server.servlet.encoding.force-response=true
