マルチプロジェク化、サービス層追加。

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'spring-example'
+
+include 'spring-example-common'
+include 'spring-example-greeting'
+include 'spring-example-person'
+include 'spring-example-app'
