--- a/spring-example-app/src/main/resources/application.properties
+++ b/spring-example-app/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+# GET のときはこちらが適用？
 server.tomcat.uri-encoding=ISO-8859-1
 
+# POST のときはこちらが適用？
 server.servlet.encoding.charset=ISO-8859-1
 #server.servlet.encoding.enabled=true
 #server.servlet.encoding.force=true
