--- a/spring-example-app/src/main/resources/application.properties
+++ b/spring-example-app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# GET のときはこちらが適用？
-server.tomcat.uri-encoding=ISO-8859-1
+# GET \u306e\u3068\u304d\u306f\u3053\u3061\u3089\u304c\u9069\u7528\uff1f
+#server.tomcat.uri-encoding=ISO-8859-1
 
-# POST のときはこちらが適用？
-server.servlet.encoding.charset=ISO-8859-1
+# POST \u306e\u3068\u304d\u306f\u3053\u3061\u3089\u304c\u9069\u7528\uff1f
+#server.servlet.encoding.charset=ISO-8859-1
 #server.servlet.encoding.enabled=true
 #server.servlet.encoding.force=true
 #server.servlet.encoding.force-request=true
