--- a/spring-example-app/src/main/resources/application.properties
+++ b/spring-example-app/src/main/resources/application.properties
@@ -7,3 +7,19 @@
 #server.servlet.encoding.force=true
 #server.servlet.encoding.force-request=true
 #server.servlet.encoding.force-response=true
+
+# DB 接続情報
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 コンソールを利用するための設定
+spring.h2.console.enabled=true
+
+# SQL ログ出力
+logging.level.org.springframework=warn
+logging.level.com.example.demo.UserDataMapper=debug
+
+# MyBatis 設定
+mybatis.configuration.map-underscore-to-camel-case=true
