spring-example-webapp をサブプロジェクト化。

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'spring-example-common'
 include 'spring-example-greeting'
 include 'spring-example-person'
 include 'spring-example-app'
+include 'spring-example-webapp'
