--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'eclipse-wtp'
     apply plugin: 'jacoco'
     test {
         reports.html.enabled = false
