--- a/spring-example-webapp/build.gradle
+++ b/spring-example-webapp/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.6'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
     id 'java'
     id 'war'
 }
@@ -19,17 +19,15 @@ repositories {
     mavenCentral()
 }
 
-apply plugin: 'eclipse-wtp'
-
 dependencies {
+    //implementation project(':spring-example-common')
     implementation fileTree(dir: '../spring-example-common/build/libs', include: ['*.jar'])
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'javax.servlet:jstl:1.2'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'javax.servlet.jsp:jsp-api:2.2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
